--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,4 @@
+
 .example-spacer {
   flex: 1 1 auto;
 }
@@ -11,4 +12,17 @@
 #title {
   font-size: 21px;
   margin-top: 1.5px;
+}
+table {
+  width: 100%;
+}
+
+.mat-mdc-form-field {
+  font-size: 14px;
+  width: 100%;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
 }
