--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<body>
 <mat-toolbar color="basic">
   <!-- <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
         <mat-icon>menu</mat-icon>
@@ -11,6 +12,7 @@
 </mat-toolbar>
 
 <div class="container">
+  
   <div style="margin-top: 10px">
     <mat-form-field>
       <mat-label>Filter</mat-label>
@@ -75,3 +77,4 @@
     </div>
   </div>
 </div>
+</body>
