--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,6 +11,11 @@
   height: 20px;
   margin-left: 50px;
 }
+#logo1 {
+  height: 40px;
+  width: 40px;
+  margin-right: 50px;
+}
 #title {
   font-size: 21px;
   margin-top: 1.5px;
@@ -27,10 +32,11 @@ table {
 .container {
   max-width: 1200px;
   margin: 0 auto;
+  padding-bottom: 10px;
+  
+  
 }
 
-body{
-  background-image: url("src/bg.png");
-  background-size: cover;
 
-}
+
+
