--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,80 +1,140 @@
-<body>
-<mat-toolbar color="basic">
-  <!-- <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+
+  <mat-toolbar color="basic">
+    <!-- <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
         <mat-icon>menu</mat-icon>
       </button> -->
-  <mat-icon id="logo">note_add</mat-icon>
-  <span id="title">ToDo List</span>
-  <span class="example-spacer"></span>
-  <button mat-stroked-button id="addTask" (click)="openDialog()">
-    Add Task
-  </button>
-</mat-toolbar>
+    <mat-icon id="logo">note_add</mat-icon>
+    <span id="title">ToDo List</span>
+    <span class="example-spacer"></span>
+    <button mat-stroked-button id="addTask" (click)="openDialog()">
+      Add Task
+    </button>
+    <button mat-fab color="warn" id="logo1" (click)="openDialog1()">
+      <mat-icon>person</mat-icon>
+    </button>
+  </mat-toolbar>
 
-<div class="container">
-  
-  <div style="margin-top: 10px">
-    <mat-form-field>
-      <mat-label>Filter</mat-label>
-      <input
-        matInput
-        (keyup)="applyFilter($event)"
-        placeholder="Ex. Mia"
-        #input
-      />
-    </mat-form-field>
+  <div class="container">
+    <div style="margin-top: 10px">
+      <mat-form-field>
+        <mat-label>Search</mat-label>
+        <input matInput (keyup)="applyFilter($event)" #input />
+      </mat-form-field>
 
-    <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource" matSort>
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Serial</th>
-          <td mat-cell *matCellDef="let row">{{ row.id }}</td>
-        </ng-container>
+      <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort>
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Serial</th>
+            <td mat-cell *matCellDef="let row">{{ row.id }}</td>
+          </ng-container>
 
-        <ng-container matColumnDef="title">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Title</th>
-          <td mat-cell *matCellDef="let row">{{ row.title }}</td>
-        </ng-container>
+          <ng-container matColumnDef="title">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Title</th>
+            <td mat-cell *matCellDef="let row">{{ row.title }}</td>
+          </ng-container>
 
-        <ng-container matColumnDef="description">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
-          <td mat-cell *matCellDef="let row">{{ row.description }}</td>
-        </ng-container>
+          <ng-container matColumnDef="description">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
+              Description
+            </th>
+            <td mat-cell *matCellDef="let row">{{ row.description }}</td>
+          </ng-container>
 
-        <ng-container matColumnDef="date">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
-          <td mat-cell *matCellDef="let row">{{ row.date | date }}</td>
-        </ng-container>
-        
-        <ng-container matColumnDef="action">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Actions</th>
-          <td mat-cell *matCellDef="let row">
-            {{ row.action }}
-            <button mat-icon-button color="primary" (click)="editTask(row)">
-              <mat-icon>edit</mat-icon>
-            </button>
-            <button mat-icon-button color="warn" (click)="deleteTask(row.id)">
-              <mat-icon>delete</mat-icon>
-            </button>
-          </td>
-        </ng-container>
+          <ng-container matColumnDef="date">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
+            <td mat-cell *matCellDef="let row">{{ row.date | date }}</td>
+          </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+          <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              Actions
+            </th>
+            <td mat-cell *matCellDef="let row">
+              {{ row.action }}
+              <button mat-icon-button color="accent" (click)="doneTask(row)">
+                <mat-icon>done</mat-icon>
+              </button>
+              <button mat-icon-button color="primary" (click)="editTask(row)">
+                <mat-icon>edit</mat-icon>
+              </button>
+              <button mat-icon-button color="warn" (click)="deleteTask(row.id)">
+                <mat-icon>delete</mat-icon>
+              </button>
+            </td>
+          </ng-container>
 
-        <!-- Row shown when there is no matching data. -->
-        <tr class="mat-row" *matNoDataRow>
-          <td class="mat-cell" colspan="4">
-            There is no task for now! :) "{{ input.value }}"
-          </td>
-        </tr>
-      </table>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
-      <mat-paginator
-        [pageSizeOptions]="[5, 10, 25, 100]"
-        aria-label="Select page of users"
-      ></mat-paginator>
+          <!-- Row shown when there is no matching data. -->
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">
+              &nbsp;&nbsp;&nbsp;&nbsp; There is no task for now!{{
+                input.value
+              }}
+            </td>
+          </tr>
+        </table>
+
+        <mat-paginator
+          [pageSizeOptions]="[5, 10, 25, 100]"
+          aria-label="Select page of users"
+        ></mat-paginator>
+      </div>
     </div>
   </div>
-</div>
-</body>
+  
+  <div>
+    <h1 style="text-align: center; padding-top: 20px">History</h1>
+    
+
+    <!-- <app-task></app-task> -->
+
+    <div class="container">
+      <div style="margin-top: 10px">
+        <div class="mat-elevation-z8">
+          <table mat-table [dataSource]="dataSource1" matSort>
+            <ng-container matColumnDef="id">
+              <th mat-header-cell *matHeaderCellDef >Serial</th>
+              <td mat-cell *matCellDef="let row">{{ row.id }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="title">
+              <th mat-header-cell *matHeaderCellDef >Title</th>
+              <td mat-cell *matCellDef="let row">{{ row.title }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="description">
+              <th mat-header-cell *matHeaderCellDef >
+                Description
+              </th>
+              <td mat-cell *matCellDef="let row">{{ row.description }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="date">
+              <th mat-header-cell *matHeaderCellDef >Date</th>
+              <td mat-cell *matCellDef="let row">{{ row.date | date }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="action">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>&nbsp;
+                Delete
+              </th>
+              <td mat-cell *matCellDef="let row">
+                {{ row.action }}
+                <button mat-icon-button color="warn" (click)="deleteHistory(row.id)">
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns1"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns1"></tr>
+          </table>
+         
+        </div>
+      </div>
+    </div>
+  </div>
+
